plugins {
    id 'com.android.library'
    id 'kotlin-android'
    id 'kotlin-parcelize'
    id 'kotlin-kapt'
}

android {
    compileSdk compile_sdk_version
    namespace 'com.sceyt.chatuikit'

    defaultConfig {
        minSdk min_sdk_version
        targetSdk target_sdk_version

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
    }

    buildTypes {
        release {
            isDefault = true
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17

    }
    kotlinOptions {
        jvmTarget = '17'
    }

    buildFeatures {
        dataBinding true
        viewBinding true
        buildConfig = true
    }
}

dependencies {
    api libs.appcompat
    api libs.material
    api libs.constraintlayout
    api libs.recyclerview
    api libs.fragment.ktx
    api libs.core.ktx
    api libs.sceyt.chat.android.sdk
    api libs.lifecycle.runtime.ktx
    api libs.lifecycle.livedata.ktx
    api libs.glide
    api libs.glide.transformations
    api libs.ion
    api libs.firebase.messaging.ktx
    annotationProcessor libs.room.compiler
    //noinspection KaptUsageInsteadOfKsp
    kapt libs.room.compiler
    api libs.room.runtime
    api libs.room.ktx
    api libs.koin.android
    api libs.media3.exoplayer
    api libs.media3.ui
    api libs.lottie
    api libs.jsoup
    api libs.flexbox
    api libs.sdp.android
    api libs.ssp.android
    api libs.light.compressor
    api libs.work.runtime.ktx
    api libs.waveformSeekBar
    api libs.photo.view
    api libs.emoji2.bundled
    api libs.emoji.google
    api libs.libphonenumber
    api libs.ucrop
    api libs.google.maps


    // Overriding the version of the library
    implementation libs.gson
    implementation libs.okio

    // Instrumented Unit Tests
    androidTestImplementation libs.junit.ktx
    androidTestImplementation libs.core.testing
    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.mockito.core
    androidTestImplementation libs.kotlinx.coroutines.test
    androidTestImplementation libs.truth
    testImplementation libs.junit
    testImplementation libs.truth
}
apply from: "${rootProject.projectDir}/maven-publish/publish-module.gradle"